code climate badges 2

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "brain-games",
   "version": "0.0.10",
-  "description": "[![Code Climate](https://codeclimate.com/github/ula9/js_l1_brain_games-s12/badges/gpa.svg)](https://codeclimate.com/github/ula9/js_l1_brain_games-s12)",
+  "description": "",
   "bin": {
     "brain-even": "./bin/brain-even.js"
   },
