--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "babel-plugin-syntax-flow": "*",
     "babel-plugin-transform-flow-strip-types": "*",
     "flow-bin": "^0.37",
-    "flow-typed": "*"
+    "flow-typed": "*",
+    "eslint": "*",
+    "eslint-config-airbnb": "*",
+    "eslint-plugin-flowtype": "*",
+    "eslint-plugin-import": "*"
   },
   "dependencies": {
     "babel-cli": "^6.18.0",
