package.json fixes

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "babel-node": "babel-node",
     "flow": "flow",
-    "flow-typed": "flow-typed"
+    "flow-typed": "flow-typed",
+    "eslint": "eslint"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "babel-cli": "*",
     "babel-core": "*",
+    "babel-eslint": "*",
     "babel-preset-env": "*",
     "babel-preset-stage-0": "*",
     "babel-plugin-syntax-flow": "*",
