--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "[![Code Climate](https://codeclimate.com/github/ula9/js_l1_brain_games-s12/badges/gpa.svg)](https://codeclimate.com/github/ula9/js_l1_brain_games-s12)",
   "bin": {
     "brain-even": "./bin/brain-even.js"
@@ -45,10 +45,7 @@
     "readline-sync": "^1.4.5"
   },
   "dependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-preset-env": "^1.1.4",
-    "babel-preset-stage-0": "^6.16.0"
+    "readline-sync": "^1.4.5"
   },
   "main": "index.js"
 }
