--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.3",
   "description": "[![Code Climate](https://codeclimate.com/github/ula9/js_l1_brain_games-s12/badges/gpa.svg)](https://codeclimate.com/github/ula9/js_l1_brain_games-s12)",
   "bin": {
-    "brain-even": "./bin/brain-even.js"
+    "brain-even": ".src//bin/brain-even.js"
   },
   "scripts": {
     "babel-node": "babel-node",
