Adding main menu

--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "brain-games",
-  "version": "0.1.6",
+  "version": "1.0.0",
   "description": "[![Code Climate](https://codeclimate.com/github/ula9/js_l1_brain_games-s12/badges/gpa.svg)](https://codeclimate.com/github/ula9/js_l1_brain_games-s12)",
   "bin": {
-    "brain-even": "./src/bin/brain-even.js"
+    "brain-games": "dist/bin/brain-games.js"
   },
   "scripts": {
+    "test": "jest",
     "babel-node": "babel-node",
     "flow": "flow",
     "flow-typed": "flow-typed",
-    "eslint": "eslint"
+    "gulp": "gulp",
+    "eslint": "eslint",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -20,7 +24,7 @@
     "games"
   ],
   "author": "LazyCoder",
-  "license": "BSD-2-Clause",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/ula9/js_l1_brain_games-s12/issues"
   },
