--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain-games",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "[![Code Climate](https://codeclimate.com/github/ula9/js_l1_brain_games-s12/badges/gpa.svg)](https://codeclimate.com/github/ula9/js_l1_brain_games-s12)",
   "bin": {
     "brain-games": "dist/bin/brain-games.js"
@@ -38,6 +38,7 @@
     "babel-plugin-transform-runtime": "*",
     "babel-preset-env": "*",
     "babel-preset-stage-0": "*",
+    "colors": "^1.1.2",
     "debug": "*",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "*",
@@ -49,6 +50,8 @@
     "readline-sync": "^1.4.5"
   },
   "dependencies": {
+    "chalk": "^1.1.3",
     "readline-sync": "^1.4.5"
-  }
+  },
+  "main": "index.js"
 }
